--- a/API_TextRank_GFractal.ipynb
+++ b/API_TextRank_GFractal.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "<module 'pkg_resources' from 'C:\\\\Users\\\\Jorge Hermosillo\\\\anaconda3\\\\lib\\\\site-packages\\\\pkg_resources\\\\__init__.py'>"
+       "<module 'pkg_resources' from 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages\\\\pkg_resources\\\\__init__.py'>"
       ]
      },
      "execution_count": 1,
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3586,7 +3586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
