--- a/API_TextRank_GFractal.ipynb
+++ b/API_TextRank_GFractal.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "<module 'pkg_resources' from 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages\\\\pkg_resources\\\\__init__.py'>"
+       "<module 'pkg_resources' from 'C:\\\\Users\\\\Jorge Hermosillo\\\\anaconda3\\\\lib\\\\site-packages\\\\pkg_resources\\\\__init__.py'>"
       ]
      },
      "execution_count": 1,
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {
     "id": "pM0Af8l7tRj4"
    },
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {
     "id": "Rq4nShdDDzqZ"
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -877,165 +877,7 @@
     "id": "NLlshR5zIiba",
     "outputId": "7e1daecf-ce6f-4f26-bb97-21d6564f5cad"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>docs</th>\n",
-       "      <th>target</th>\n",
-       "      <th>TR</th>\n",
-       "      <th>GF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>xcrc math coprocessor instal succesfully mega ...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>[mhz, work, fpu, clock, midget, coprocessor, l...</td>\n",
-       "      <td>[fpu, mhz, clock, fine, work]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>hope somebody mention clutch clutch baerga wor...</td>\n",
-       "      <td>9</td>\n",
-       "      <td>[baerga, alomar, scoring, position, clutch, rb...</td>\n",
-       "      <td>[clutch, alomar, baerga, rbis, hit, position, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>information need probably write new motif widg...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>[motif, widget, list, multicolumn, header, spe...</td>\n",
-       "      <td>[motif, write, list, widget, need, header, mul...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>assume jesuss plea father let cup pass merely ...</td>\n",
-       "      <td>15</td>\n",
-       "      <td>[jesus, father, people, king, jesuss, kingdom,...</td>\n",
-       "      <td>[know, jesuss, father, jesus, king, earthly, p...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>forward old posting celp speech compression ca...</td>\n",
-       "      <td>11</td>\n",
-       "      <td>[celp, sparc, week, sun, code, end, bps, sourc...</td>\n",
-       "      <td>[celp, week, sparc, think, end, sun, bps, code...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4911</th>\n",
-       "      <td>fete word formally commonly refer positivejoyo...</td>\n",
-       "      <td>17</td>\n",
-       "      <td>[policy, israel, solution, law, abhor, attitud...</td>\n",
-       "      <td>[solution, final, israel, right, policy, israe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4912</th>\n",
-       "      <td>white house office press secretary immediate r...</td>\n",
-       "      <td>18</td>\n",
-       "      <td>[job, pittsburgh, press, april, saturday, pres...</td>\n",
-       "      <td>[pittsburgh, job, press, secretary, april, hou...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4913</th>\n",
-       "      <td>bcs objectwindow version try datum process win...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[program, window, object, mywindow, datum, pro...</td>\n",
-       "      <td>[mywindow, program, mywinobj, window, object, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4914</th>\n",
-       "      <td>correction hard atheism faith grip man stalin ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[atheism, statement, people, faith, atheist, s...</td>\n",
-       "      <td>[hard, statement, atheism, atheist, example, p...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4915</th>\n",
-       "      <td>readprint reason joystick stuff time efficient...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[int, joystick, port, count, temp, time, joypo...</td>\n",
-       "      <td>[int, define, temp, joy, count, include, read,...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4916 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   docs  target  \\\n",
-       "0     xcrc math coprocessor instal succesfully mega ...      12   \n",
-       "1     hope somebody mention clutch clutch baerga wor...       9   \n",
-       "2     information need probably write new motif widg...       5   \n",
-       "3     assume jesuss plea father let cup pass merely ...      15   \n",
-       "4     forward old posting celp speech compression ca...      11   \n",
-       "...                                                 ...     ...   \n",
-       "4911  fete word formally commonly refer positivejoyo...      17   \n",
-       "4912  white house office press secretary immediate r...      18   \n",
-       "4913  bcs objectwindow version try datum process win...       2   \n",
-       "4914  correction hard atheism faith grip man stalin ...       0   \n",
-       "4915  readprint reason joystick stuff time efficient...       3   \n",
-       "\n",
-       "                                                     TR  \\\n",
-       "0     [mhz, work, fpu, clock, midget, coprocessor, l...   \n",
-       "1     [baerga, alomar, scoring, position, clutch, rb...   \n",
-       "2     [motif, widget, list, multicolumn, header, spe...   \n",
-       "3     [jesus, father, people, king, jesuss, kingdom,...   \n",
-       "4     [celp, sparc, week, sun, code, end, bps, sourc...   \n",
-       "...                                                 ...   \n",
-       "4911  [policy, israel, solution, law, abhor, attitud...   \n",
-       "4912  [job, pittsburgh, press, april, saturday, pres...   \n",
-       "4913  [program, window, object, mywindow, datum, pro...   \n",
-       "4914  [atheism, statement, people, faith, atheist, s...   \n",
-       "4915  [int, joystick, port, count, temp, time, joypo...   \n",
-       "\n",
-       "                                                     GF  \n",
-       "0                         [fpu, mhz, clock, fine, work]  \n",
-       "1     [clutch, alomar, baerga, rbis, hit, position, ...  \n",
-       "2     [motif, write, list, widget, need, header, mul...  \n",
-       "3     [know, jesuss, father, jesus, king, earthly, p...  \n",
-       "4     [celp, week, sparc, think, end, sun, bps, code...  \n",
-       "...                                                 ...  \n",
-       "4911  [solution, final, israel, right, policy, israe...  \n",
-       "4912  [pittsburgh, job, press, secretary, april, hou...  \n",
-       "4913  [mywindow, program, mywinobj, window, object, ...  \n",
-       "4914  [hard, statement, atheism, atheist, example, p...  \n",
-       "4915  [int, define, temp, joy, count, include, read,...  \n",
-       "\n",
-       "[4916 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "newsgroups_train_data = process_20NG(categories,n=100,remove_STW=True,lemmatize=True)\n",
     "newsgroups_train_data"
@@ -3586,7 +3428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
